# Neptunus

./: .gitignore  README.md  ROADMAP.md  VECTOR_DB.md  brainstorm.md  package.json  vercel.json
app/: globals.css
app/auth/signup/: page.tsx
backend/: .vercelignore  agent_tools.py  auth.py  build_laws_vector_db.py  build_vector_db.py  config.py  database.py  federal_register.py  law_search.py  llm.py  main.py  prompts.py  pyproject.toml  query_vector_db.py  regulation_search.py  regulations.py  requirements.txt  schemas.py  web_tools.py
backend/api/: index.py
backend/ingestion/: embedder.py  ingest.py  loader.py  splitter.py  vector_store.py
backend/routers/: auth.py
backend/tests/: test_config.py  test_embedder.py  test_ingest.py  test_loader.py  test_splitter.py  test_vector_store.py
data/: persona_rules_knowledge_base.json  related_laws_knowledge_base.json
data/laws_vector_db/11643669-e894-4943-afb7-d72d3f6d7d0e/: index_metadata.pickle
data/laws_vector_db/8d5d8bf1-b8bf-4f37-8dc7-ecd5f0fe7daa/: index_metadata.pickle
data/vector_db/06f2ade3-fbab-4a23-a74c-d52646406b3e/: index_metadata.pickle
docs/superpowers/plans/: 2026-07-03-ingestion-pipeline.md
docs/superpowers/specs/: 2026-07-03-ingestion-pipeline-design.md  2026-07-03-rag-chatbot-design.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/components/: Markdown.tsx  RuleDrawer.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts  types.ts
lib/: api.ts  types.ts
slides/: Neptunus_Agent.pptx
(+2 files in other folders)
