[project]
name = "public-comment-copilot-api"
version = "0.1.0"
description = "FastAPI backend for Public Comment Copilot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.0",
    "pinecone>=9.1.0",
    "pypdf>=6.14.2",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
